still updating the file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
         <title>menu</title>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="/css/styles.css" rel="stylesheet" type="text/css"> 
+        <link href="css/styles.css" rel="stylesheet" type="text/css"> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  </head> 
  <body>
@@ -15,8 +15,11 @@
        </div>     
       </div>  
       <div class="row">
-        <div class="col-lg-3">
-          <p><div id="black">Happy Hour</div></p><p><div id="orange"> Party Time</div></p>
+        <div class="col-md-3">
+          <ul>
+          <li><div id="black">Happy Hour</div></li>
+          <li><div id="orange"> Party Time</div></li>
+         </ul>
         </div> 
         <div class="col-md-3" id="breakfirst">
           <p><br><br><br><br><em>Breakfast</em></p>
@@ -28,9 +31,7 @@
           <p><br><br><br><br><em>Dinner</em></p>
         </div>
       </div>
-      <br>
-      <br>
-      <div class="row">
+       <div class="row">
         <div class="col-md-6" id="text">
         <h1>Fast Food</h1><h2>You'll love our delicous food</h2><br>
         <p>Lorem ipsium dolor sir emet, consectetur adipisic <br> ing elt, sed do eiusmod tempor incididunt ut <br>
@@ -40,8 +41,8 @@
         </div>
        
         <div class="col-md-5" class="img-thumbnail">
-            <img src="/images/fastFood1.jpg" alt="" class="img-thumbnail">
-            <img src="/images/fastFood2.jpg" alt="" class="img-thumbnail">
+            <img src="images/fastFood1.jpg" alt="" class="img-thumbnail">
+             <img src="images/fastFood2.jpg" alt=""class="img-thumbnail">
             <button type="button" id="button1">VIEW GALLERY</button>
         </div>
         <div class="col-md-6" id="drinks">
@@ -53,10 +54,10 @@
             </p>
             <div class="col-md-8">
               <div class="column">              
-                <img src="/images/drink1.jpg" class="img-thumbnail">
+                <img src="images/drink1.jpg" class="img-thumbnail">
               </div>
               <div class="column">
-                <img src="/images/drink2.jpg" class="img-thumbnail">
+                <img src="images/drink2.jpg" class="img-thumbnail">
               </div>
            </div>
            <button type="button" id="button2">VIEW GALLERY</button>
