--- a/index.html
+++ b/index.html
@@ -63,13 +63,65 @@
            <button type="button" id="button2">VIEW GALLERY</button>
          </div>
          </div>
-          <div class="container-fluid" id="=low">
-           <ul>
-             <li>Fast Food</li>
-             <li>Drinks</li>
-             <li>Chicken</li>
-             <li>Rice</li>
-           </ul>
+
+         <img class="img2" src="images/backgrounds/foodsBg.jpg">
+         <div class="container">
+         <div class="row row1">
+
          </div>
+         <div class="row row2">
+           <div class="col-md-4">
+             <img src="images/fastfood/chickenBurger.jpg">
+             <p class="row2-text">Chicken Burger</p>
+           </div>
+           <div class="col-md-4">
+             <img src="images/fastfood/beefBurger.jpg">
+             <p class="row2-text">Beef Burger</p>
+           </div>
+           <div class="col-md-4">
+             <img src="images/fastfood/chickenPizza.jpg">
+             <p class="row2-text">Chicken Pizza</p>
+           </div>
+         </div>
+       </div>
+         <div class="container cont1">
+           <div class="row row3">
+             <div class="col-md-6">
+               <h3 class="h3text">&nbsp&nbsp&nbsp&nbspOur Happy Customers</h3>
+               <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<strong>George Richard</strong></p>
+               <p>Great food! Menu is awesome, their food is not only great but<br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspalso in the right price.I'll highly recommend them :)</p>
+               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<span style="font-size:30px; color:#F15A29"><</span>&nbsp&nbsp&nbsp&nbsp&nbsp<img  src="images/customers/p3.png">
+               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img  src="images/customers/p1.png">
+               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img  src="images/customers/p2.png">&nbsp&nbsp&nbsp&nbsp&nbsp<span style="font-size:30px; color:#F15A29">></span>
+             </div>
+             <div  class="col-md-6">
+               <h3 class="h3text">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAbout Menu</h3>
+               <p><strong>We are menu a little team of 7 memebers.</strong><br>
+                 Lorem ipsum dolor sit amet, vitae suspendisse vestibulum, viverra dignissim vel, dis enim diam vel dui metus, sollicitudin a, tellus massa a tristique donec.
+                 Aliquet sed a morbi id nibh, libero id vestibulum, lectus amet, sapien pellentesque imperdiet consequat fermentum magna interdum, nam urna vehicula lacus congue mollis.</p>
+               </div>
+             </div>
+           </div>
+           <img class="img3" src="images/backgrounds/subscribe.jpg">
+           <div class="email">
+             <p > <span style="font-size: 30px; font-family:serif;" >Get our daily food items delivered to your Email</span></p>
+             <p ><input id="inputfield" type="email"  placeholder="Your email" required>
+               <button class="btn btn-email">Subscribe</button></p>
+             </div>
+           </div>
+
+           <img class="img4">
+           <div class="footer-bkgrnd">
+             <img src="images/footerlogos/logo_white.png">
+             <h2 id="menu" ><strong>MENU</strong></h2>
+             <p style="font-size:25px; color:white;">Thats what we are</p>
+             <img src="images/footerlogos/facebook.png">
+             &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/footerlogos/twitter.png">
+             &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/footerlogos/pinterest.png">
+             <p id="menu2" >2016 Menu Restaurant</p>
+           </div>
+         </body>
+         </html>
+
  </body>
 </html> 
