--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
          <div class="row row1">
 
          </div>
-         <div class="row row2">
+         <div class="row ">
            <div class="col-md-4">
              <img src="images/fastfood/chickenBurger.jpg">
              <p class="row2-text">Chicken Burger</p>
